zkay/examples/type_errors/AnnotateUintKey.zkay
pragma zkay >=0.2.0;

contract AnnotateUintKey {

	mapping (uint!x => uint@x) m;
}
